--- a/_posts/2019-12-13-bee-net.md
+++ b/_posts/2019-12-13-bee-net.md
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Bee-Net A FCNN workflow 
+title: Bee-Net&#58 A FCNN workflow 
 ---
 
 My friend Jaylene has an apiary and as part of that is involved in scientific
@@ -24,16 +24,15 @@ tkinter app that makes it really easy to segment images and save them to
 single-channel PNGs. Anyways, this was the most time consuming part of the
 process.
 
-![_config.yml]({{ site.baseurl }}/images/bee-net/mask_and_image.jpg) |
+<em>Example image...</em>
+![_config.yml]({{ site.baseurl }}/images/bee-net/mask_and_image.jpg) 
+<em>and corresponding mask</em> 
 ![_config.yml]({{ site.baseurl }}/images/bee-net/mask_and_image.png)
-:-------------------------:|:-------------------------: <em>Example
-image...</em>             |  <em>and corresponding mask</em> 
 
 
 
-
-## first approach: sliding window conv-net This was the state-of-the art in
-image segmentation until
+## first approach: sliding window conv-net 
+This was the state-of-the art in image segmentation until
 [FCNNs](https://people.eecs.berkeley.edu/~jonlong/long_shelhamer_fcn.pdf) came
 onto the scene. The sliding window conv-net involves extracting little patches
 from the image, usually of size around 32x32, and assigns each little patch with
@@ -71,11 +70,6 @@ percent of the pixels in a given image, meaning negative examples contribute a
 lot more to the overall loss. Anyways, I'll describe my current approach to
 identifying bees in images, and how I'm working through this problem.
 
-
-
-
-
-
 # method
 
 code is all on [github](https://github.com/tcolligan4/bee-network).
@@ -94,11 +88,13 @@ transition there once I feel like model complexity is the limiting factor.
 network used." %}
 
 The images I work with are also 1080x1920, so I resized them to approximately
-1/3 the dimension to ease training on my macbook.  I haven't implemented any
-data augmentation, though I'm sure it would help. Another technique I can use is
-using random crops of the image. One thing I don't think will help is random
-zooming, as most bees stay around the same size in the image. The network is
-training as I write this, so I'll update periodically.
+1/3 the dimension to ease training on my macbook. The network is
+training as I write this, so I'll update periodically. The model here is
+definitely limited by capacity. It can't fit all the data, so it tends to just
+predict every pixel as "not bee" (reasonable because not bee pixels constitute
+99.8% of the images).
+
+
 
 
 
