remove blog post

--- a/_posts/2019-12-13-bee-net.md
+++ b/_posts/2019-12-13-bee-net.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Bee-Net A FCNN workflow
+published: false
 ---
 
 My friend Jaylene has an apiary and as part of that is involved in scientific projects sometimes.
