Extend journal entry with results and next steps.

--- a/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
@@ -61,3 +61,20 @@ def lr_schedule(epoch):
         rlr = lr / 32
     return rlr
 ```
+---
+# Sun Mar 29 10:03:41 MDT 2020: Cont.
+The models mentioned above only reached ~.75 maximum f1 score on the validation set and
+~.5 f1, respectively.
+I also trained a unet model with ~5m parameters and the first lr schedule above on surface
+reflectance data from the whole year. This reached ~.75 f1 as well.
+Both models trained above for a few hundred epochs, ultimately getting to around 80-90% validation
+accuracy, and overfitting a bit on the training set.
+
+Currently, a model with 5m parameters is being trained on may-oct data that doesn't include offline
+oversampling through centroid extraction.
+If the current models don't do well, I'm going to try a few things:
+
+- [] Make sure f1score metric is working as expected.
+- [] Deepen the UNet architecture to use four downsampling steps (like the original paper).
+- [] Add more data: use all 7 bands available for surface reflectance data.
+- [] Create table of model results.
