--- a/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
@@ -74,8 +74,9 @@ Currently, a model with 5m parameters is being trained on may-oct data that does
 oversampling through centroid extraction.
 If the current models don't do well, I'm going to try a few things:
 
-- [  ] Make sure f1score metric is working as expected.
-- [  ] Make sure data is clean.
-- [  ] Deepen the UNet architecture to use four downsampling steps (like the original paper).
-- [  ] Add more data: use all 7 bands available for surface reflectance data.
-- [] Create table of model results.
+- [ ] Make sure f1score metric is working as expected.
+- [ ] Make sure data is clean.
+- [ ] Deepen the UNet architecture to use four downsampling steps (like the original paper).
+- [ ] Add more data: use all 7 bands available for surface reflectance data.
+- [ ] Create table of model results.
+{: style='list-style-type: none'}
