Change titles. Increase size of photo.

--- a/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020/2020-03-27-2020-03-27-model-comparison.md
@@ -74,9 +74,14 @@ Currently, a model with 5m parameters is being trained on may-oct data that does
 oversampling through centroid extraction.
 If the current models don't do well, I'm going to try a few things:
 
-- [ ] Make sure f1score metric is working as expected.
+- [x] Make sure f1score metric is working as expected (it is).
 - [ ] Make sure data is clean.
 - [ ] Deepen the UNet architecture to use four downsampling steps (like the original paper).
 - [ ] Add more data: use all 7 bands available for surface reflectance data.
 - [ ] Create table of model results.
 {: style='list-style-type: none'}
+
+I wonder if the clouds in the data create too much noise for the model to overcome. Hopefully 
+reducing the time span that is ingested into the model will fix this. How would I test this
+hypothesis?
+
