Fix table formatting

--- a/_posts/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020-03-27-2020-03-27-model-comparison.md
@@ -17,7 +17,7 @@ One model is running on Casper and one on my computer. The Casper one is fitting
 data over Montana for 2013 with images from may to october. There is also offline data augmentation
 (no online augmentation) for the Casper model in the form of irrigated data being extracted over
 centroids of each irrigated polygon as well as extraction through a raster scan.  My local one is
-also using surf.  reflectance data over Montana from 2013, but the images are from March-April to
+also using surf. reflectance data over Montana from 2013, but the images are from March-April to
 December (full year). There is no data augmentation (offline or online) for the model using
 full-year data.
 
@@ -76,11 +76,18 @@ If the current models don't do well, I'm going to try a few things:
 
 - [x] Make sure f1score metric is working as expected (it is).
 - [ ] Make sure data is clean.
-- [ ] Deepen the UNet architecture to use four downsampling steps (like the original paper).
+- [x] Deepen the UNet architecture to use four downsampling steps (like the original paper).
+This didn't do much when trained on full-year data w/o centroids. It only reached ~70% f1.
 - [ ] Add more data: use all 7 bands available for surface reflectance data.
-- [ ] Create table of model results.
+- [x] Create table of model results.
 {: style='list-style-type: none'}
 
+<style>
+.tablelines table, .tablelines td, .tablelines th {
+        border: 1px solid black;
+        }
+</style>
+{: .tablelines}
 I wonder if the clouds in the data create too much noise for the model to overcome. Hopefully 
 reducing the time span that is ingested into the model will fix this. How would I test this
 hypothesis?
