--- a/_posts/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020-03-27-2020-03-27-model-comparison.md
@@ -5,6 +5,7 @@ published: true
 
 ---
 # Fri Mar 27 08:40:19 MDT 2020: Research notes
+### Edited on Tue April 1.
 
 Added multiprocessing to the data generator on Casper.
 
@@ -23,6 +24,7 @@ full-year data.
 
 Learning rate schedule for full-year model:
 Full year comprises of 13 stacked rgb images. 
+
 ```python
 def lr_schedule(epoch):
     lr = 1e-3
@@ -75,20 +77,11 @@ oversampling through centroid extraction.
 If the current models don't do well, I'm going to try a few things:
 
 - [x] Make sure f1score metric is working as expected (it is).
-- [ ] Make sure data is clean.
 - [x] Deepen the UNet architecture to use four downsampling steps (like the original paper).
 This didn't do much when trained on full-year data w/o centroids. It only reached ~70% f1.
-- [ ] Add more data: use all 7 bands available for surface reflectance data.
 - [x] Create table of model results.
 {: style='list-style-type: none'}
 
-<style>
-.tablelines table, .tablelines td, .tablelines th {
-        border: 1px solid black;
-        }
-</style>
-{: .tablelines}
 I wonder if the clouds in the data create too much noise for the model to overcome. Hopefully 
 reducing the time span that is ingested into the model will fix this. How would I test this
 hypothesis?
-
