--- a/_posts/2020-03-31-2020-03-31-data-description.md
+++ b/_posts/2020-03-31-2020-03-31-data-description.md
@@ -7,7 +7,7 @@ published: true
 Currently I'm using LANDSAT 8 surface reflectance data, stacked along the channel axis.
 Since I only have training data from 2013, I only am training/testing on LANDSAT data from the same
 year. However, LANDSAT 8 started taking images over Montana in March/April in 2013, so the year of
-2013 is defined as ~March-December.
+2013 is defined as ~March-December for my purposes.
 
 The revisit frequency of LANDSAT 8 is ~16 days, so best case scenario I have around 17 images to
 work with. However, some LANDSAT surface reflectance scenes aren't available, so some path/rows only
@@ -18,15 +18,16 @@ time period of a few months. I'll try to describe the data setup graphically bel
 ## All surface reflectance images from the year 2013 over MT
 
 ![](/assets/img/data-comparison/all_sampling_dates.png)
-The x-axis is the LANDSAT path/row over which the images were taken. The black dots on the blue line
-represent the date at which a LANDSAT image was taken. The blue line only serves as a visual guide;
-it's hard to get meaning out of just the black dots. 
+The x-axis is the LANDSAT path/row over which the images were taken (sparsely labeled). The black
+dots on the blue line represent the date at which a LANDSAT image was taken. The blue line only
+serves as a visual guide; it's hard to get meaning out of just the black dots. 
 
 It's evident from the above figure that 
 
 - Most path/rows have a different number of images taken of them in 2013.
 - Some are sporadically sampled, like the one left of 34_25.
-- Ingesting images into the model requires some decision about what time range to use.
+- Some path/rows don't have many images available.
+- Ingesting images into the model requires some decision about what time span to focus on.
 
 Since the channel axis of a 2-d convolutional network has to be fixed during training and inference,
 I had to make a decision about what time range of images to use. I chose two arbitrary ranges: from
@@ -46,8 +47,8 @@ overlaid.  The same method was applied to the images from mid April to mid Octob
 the first 9 images. The two numbers (9 and 13) were chosen because most of the path rows had at
 least that many images. One thing I could do to increase the amount of data used to train the
 network is to randomly sample the start date if it's within the date range (date range can be the
-full year or from April to October). I started out doing this, but thought it may add too much
-variance. I still need to experiment with doing this.
+full year or from April to October). I'm going to experiment with doing this.
 
 For reference, the "names" of the two sampling methods are just full-year and partial-year in
-another [post]({{ site.baseurl }}/_posts/2020-03-31-2020-03-31-model-comparison-table.md), which I can't figure out how to hyperlink. 
+another [post]({% post_url 2020-03-31-2020-03-31-model-comparison-table %}). They're used to
+describe the data in the model comparison table.
