--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -12,5 +12,5 @@ Wed Apr 1 09:20:46 MDT 2020
 - [ ] Train models with random start dates, as described [here]({% post_url 2020-03-31-2020-03-31-data-description %}))
 - [ ] Add more data: use all 7 bands available for surface reflectance data.
 - [ ] Experiment with training the network with tiles taken over the centroids of irrigated polygons
-- [ ] Increase the tile size. The 224x224 tile I'm using now is difficult to interpret, even for me.
+- [ ] Weight orthogonality?
 {: style='list-style-type: none'}
