--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -4,7 +4,12 @@ published: true
 ---
 Wed Apr 1 09:20:46 MDT 2020
 
+
 - [x] Make sure data is properly registered. I visually inspected all of the path/rows over Montana and they all look perfectly registered.
+- [x] Re-extract training data, removing all tiles where there are any 0 values (this corresponds to
+  the edge of a path/row, and some LANDSAT tiles have different extent for the same path row.)
+  Doing this seems to have increased validation accuracy and possible f1 score. I didn't see this
+  issue until I manually examined all of the data by hand (the checkbox above).
 - [ ] See if I can download the missing data in over Montana, shown in the first figure [here]({%
   post_url 2020-03-31-2020-03-31-data-description %})
 - [ ] Investigate why the 1m param network (described [here]({% post_url 2020-03-31-2020-03-31-model-comparison-table %})) did better than networks with way more parameters
