Update blog post

--- a/_posts/2020-03-31-2020-03-31-data-description.md
+++ b/_posts/2020-03-31-2020-03-31-data-description.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 published: true
+updated: Wed April 8, 2020
 ---
 # Tue Mar 31 13:16:06 MDT 2020
 
@@ -52,3 +53,17 @@ full year or from April to October). I'm going to experiment with doing this.
 For reference, the "names" of the two sampling methods are just full-year and partial-year in
 another [post]({% post_url 2020-03-31-2020-03-31-model-comparison-table %}). They're used to
 describe the data in the model comparison table.
+
+# Using all bands
+I decided to use all the surface reflectance bands available to me in order to better constrain the
+problem. Using RGB images achieved a f1-score of around 80 and 85 for a non-recurrent and recurrent
+model, respectively. However, without bands like near infrared, the neural networks don't have
+access to things like NDVI and other vegetation indices that are important for determining whether
+or not a field is irrigated. The plot that shows the path/rows and associated sampling dates is
+below.
+![](/assets/img/data-comparison/sampling_dates_all_bands.png)
+
+There are two path/rows included in the RGB data set that are not in the 7-band dataset:
+34/29 and 39/29. I need to download the images (or find out where they are) for those path/rows.
+Hopefully this dataset will increase the ability of the models to correctly segment irrigated
+land.
