--- a/_posts/2020-03-27-2020-03-27-model-comparison.md
+++ b/_posts/2020-03-27-2020-03-27-model-comparison.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 published: true
+updated: April 1, 2020
 ---
 
 ---
-# Fri Mar 27 08:40:19 MDT 2020: Research notes
-### Edited on Tue April 1.
+# Fri Mar 27 08:40:19 MDT 2020
 
 Added multiprocessing to the data generator on Casper.
 
