--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -14,13 +14,13 @@ Wed Apr 1 09:20:46 MDT 2020
 - [ ] See if I can download the missing data in over Montana, shown in the first figure [here]({%
   post_url 2020-03-31-2020-03-31-data-description %})
 
-- [ ] Investigate why the 1m param network (described [here]({% post_url 2020-03-31-2020-03-31-model-comparison-table %})) did better than networks with way more parameters. Probably because the larger networks are way overparameterized and overfit.
+- [x] Investigate why the 1m param network (described [here]({% post_url 2020-03-31-2020-03-31-model-comparison-table %})) did better than networks with way more parameters. Probably because the larger networks are way overparameterized and overfit.
 
-- [ ] Train models with random start dates as described [here]({% post_url 2020-03-31-2020-03-31-data-description %}) 
+- [x] Train models with random start dates as described [here]({% post_url 2020-03-31-2020-03-31-data-description %}) 
 
 - [x] Add more data: use all 7 bands available for surface reflectance data.
 
-- [ ] Retrain recurrent networks on the same dataset as all the other networks.
+- [ ] Evaluate out-of-domain accuracy.
 
 - [x] Experiment with training networks with tiles taken over the centroids of irrigated polygons.
   Done. This definitely increases the performance of the networks on the test set.
