--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -14,6 +14,9 @@ Wed Apr 1 09:20:46 MDT 2020
 - [ ] See if I can download the missing data in over Montana, shown in the first figure [here]({%
   post_url 2020-03-31-2020-03-31-data-description %})
 
+- [ ] Run some analysis to figure out the strength of spatial autocorrelation in LANDSAT data (this
+  would have applications in how to truly divide test/train/validation shapefiles for data analysis).
+
 - [ ] Download and incorporate thermal bands into model.
 
 - [x] Investigate why the 1m param network (described [here]({% post_url 2020-03-31-2020-03-31-model-comparison-table %})) did better than networks with way more parameters. Probably because the larger networks are way overparameterized and overfit.
