--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -25,7 +25,7 @@ Wed Apr 1 09:20:46 MDT 2020
 
 - [x] Add more data: use all 7 bands available for surface reflectance data.
 
-- [ ] Evaluate out-of-domain accuracy.
+- [ ] Evaluate out-of-time-domain accuracy.
 
 - [x] Experiment with training networks with tiles taken over the centroids of irrigated polygons.
   Done. This definitely increases the performance of the networks on the test set.
