--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-updated: Thu Apr 9, 2020
+updated: Tue April 21, 2020
 ---
 Wed Apr 1 09:20:46 MDT 2020
 
@@ -36,4 +36,7 @@ Wed Apr 1 09:20:46 MDT 2020
 
 - [ ] Train a network (to use as pretrained) to predict the mean image of its inputs. This may be
 easier than training it to predict the next image.
+
+- [ ] Use some ideas from NLP to train a transformer network 
+
 {: style='list-style-type: none'}
