Update next steps

--- a/_posts/2020-04-01-2020-04-01-next-steps.md
+++ b/_posts/2020-04-01-2020-04-01-next-steps.md
@@ -11,8 +11,8 @@ Wed Apr 1 09:20:46 MDT 2020
   Doing this seems to have increased validation accuracy and possibly f1 score. I didn't notice this
   issue until I manually examined all of the data by hand.
 
-- [ ] See if I can download the missing data in over Montana, shown in the first figure [here]({%
-  post_url 2020-03-31-2020-03-31-data-description %})
+- [ ] Randomly sample the bands that I feed into the model to better approximate
+  the differences in sampling dates
 
 - [ ] Run some analysis to figure out the strength of spatial autocorrelation in LANDSAT data (this
   would have applications in how to truly divide test/train/validation shapefiles for data analysis).
